--- a/academy-kazakhstan.html
+++ b/academy-kazakhstan.html
@@ -178,8 +178,9 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+                <button type="button" class="btn btn-primary py-2 top-0 end-0 me-2" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
+            <!-- <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a> -->
         </div>
     </nav>
     <!-- Navbar End -->
@@ -413,14 +414,12 @@
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div> -->
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Подписка</h4>
-                    <!-- <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p> -->
                     <div class="position-relative w-100">
-                        <!-- <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email"> -->
                         <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2 bg-white text-primary" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
