--- a/presentations.html
+++ b/presentations.html
@@ -109,20 +109,21 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Главная</a>
-                <a href="about.html" class="nav-item nav-link">Новости</a>
-                <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
-                <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">База Знаний</a>
+                <a href="project.html" class="nav-item nav-link">Стипендии</a>
+                <!-- <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="books.html" class="dropdown-item">Книги</a>
-                        <a href="presentations.html" class="dropdown-item active">Презентации</a>
-                        <a href="video.html" class="dropdown-item">Видео</a>
-                        <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
+                        <a href="books.html" class="dropdown-item-a">Книги</a>
+                        <a href="presentations.html" class="dropdown-item-a">Презентации</a>
+                        <a href="video.html" class="dropdown-item-a">Видео</a>
                     </div>
-                </div>
-                <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
+                </div> -->
+                <a href="baza-znanii.html" class="nav-item nav-link active">База знаний</a>
+                <a href="service.html" class="nav-item nav-link">Тренинги</a>
+                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
+                <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
+                <a href="about.html" class="nav-item nav-link">Новости</a>
+                <a href="contact.html" class="nav-item nav-link">Контакты</a>
 
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -283,14 +284,12 @@
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div> -->
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Подписка</h4>
-                    <!-- <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p> -->
                     <div class="position-relative w-100">
-                        <!-- <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email"> -->
                         <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2 bg-white text-primary" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
