--- a/service.html
+++ b/service.html
@@ -175,7 +175,7 @@
     <div class="row wow fadeInUp" data-wow-delay="0.3s">
         <div class="col-12 text-center">
             <ul class="list-inline rounded mb-5" id="portfolio-flters">
-                <li class="mx-2 active" data-filter="*">All</li>
+                <li class="mx-2 active" data-filter="*">Все</li>
                 <li class="mx-2" data-filter=".first">Актуальные</li>
                 <li class="mx-2" data-filter=".second">Прошедшие</li>
             </ul>
